Implement feed generation v2 backend flow